target price has targetpriceMean data as per Karan.

--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -57,7 +57,7 @@
 					</tr>
 					<tr class="odd">
 						<td class="name">Target Price</td>
-						<td><span data-bind="text:summaryData.tpMeanEstimate, precision: 2, postFix:'%'"></span></td>
+						<td><span data-bind="text:summaryData.targetPrice, precision: 2, postFix:'%'"></span></td>
 						<td><span data-bind="text:summaryData.tpMedianEstimate, precision: 2, postFix:'%'"></span></td>
 						<td><span data-bind="text:summaryData.tpHighEstimate, precision: 2, postFix:'%'"></span>/<span data-bind="text:summaryData.tpLowEstimate, precision: 2, postFix:'%'"></span></td>
 						<td><span data-bind="text:summaryData.tpEstimateDeviation, precision: 2"></span></td>
