--- a/clientv2/company-charting.html
+++ b/clientv2/company-charting.html
@@ -101,7 +101,7 @@
     					</div>
     				</div><!--control-box end-->
 
-    				<div id="technical-chart-container"></div>
+    				<div id="technical-chart-container" style="padding-bottom:10px;"></div>
 
     				<div class="indicators-description">
     					<h2>What are Indicators?</h2>
@@ -178,7 +178,7 @@
     		<section class="technical-charting-alternative">
 
     			<div data-bind="component:{ name:'premium-preview', 
-    																	params:{sectionName: sectionName} }"></div>
+    									   params:{sectionName: sectionName} }"></div>
 
     		</section>
 
