--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -24,9 +24,9 @@
 	<div class="grid">
 		<span data-bind="template: 'company-header'"></span>
 	</div>
-	<div class="grid scan">
+	<!--<div class="grid scan">
 		<h1>Estimates</h1>
-	</div>
+	</div>-->
 	
 
 	<section id="estimates-content-alternative">
