--- a/trunk/clientv2/company-charting.html
+++ b/trunk/clientv2/company-charting.html
@@ -25,9 +25,9 @@
     		<span data-bind="template: 'company-header'"></span>
     	</div>
 
-    	<div class="grid scan">
+    	<!--<div class="grid scan">
     		<h2>Technical Charting</h2>
-    	</div>
+    	</div>-->
 
     	<div class="grid">
 
