--- a/trunk/clientv2/company-charting.html
+++ b/trunk/clientv2/company-charting.html
@@ -31,7 +31,7 @@
 
     	<div class="grid">
 
-    		<section class="technical-charting">
+    		<section class="technical-charting" data-bind="css:{'show-hidden':premiumUser() != null}">
 
     			<div class="header-bar">
     				<ul>
