Reworked userstatus logic and added feature per ticket 289

--- a/clientv2/company-charting.html
+++ b/clientv2/company-charting.html
@@ -178,7 +178,8 @@
     		<section class="technical-charting-alternative">
 
     			<div data-bind="component:{ name:'premium-preview', 
-    									   params:{sectionName: sectionName} }"></div>
+    									   params:{sectionName: sectionName,
+                                                    userStatus: userStatus} }"></div>
 
     		</section>
 
