--- a/trunk/clientv2/company-comparables.html
+++ b/trunk/clientv2/company-comparables.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/colorbox.css" />
 	<link rel="stylesheet" href="css/jquery-ui.min.css" />
-    <link rel="stylesheet" href="css/style.css?v=1.2" />
+    <link rel="stylesheet" href="css/style.css?v=1.4" />
     <link rel="stylesheet" href="css/tearsheet.css?v=1.2" />
     <link rel="stylesheet" href="css/results.css?v=1.2" />
     
@@ -65,6 +65,7 @@
 	</div>	
 	
 <!-- goes at bottom for faster page load -->
+<script type="text/javascript" src="js/vendor/store.js"></script>
 <script type="text/javascript" src="js/vendor/require.js" data-main="js/config.js"></script>
 <script type="text/javascript">
 
