updated to version # for caching issues

--- a/clientv2/change-password.html
+++ b/clientv2/change-password.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/colorbox.css" />
 	<link rel="stylesheet" href="css/jquery-ui.min.css" />
-    <link rel="stylesheet" href="css/style.css?v=1.2" />
+    <link rel="stylesheet" href="css/style.css?v=1.4" />
     <link rel="stylesheet" href="css/sign-in.css?v=1.2" />
     
 	<!--[if lt IE 9]>
@@ -41,6 +41,7 @@
 	</section>
 	
 <!-- goes at bottom for faster page load -->
+<script type="text/javascript" src="js/vendor/store.js"></script>
 <script type="text/javascript" src="js/vendor/require.js" data-main="js/config.js"></script>
 <script type="text/javascript">
 
