--- a/clientv2/print.html
+++ b/clientv2/print.html
@@ -458,6 +458,7 @@
 		</table>
 	</footer>
 	<!-- goes at bottom for faster page load -->
+	<script type="text/javascript" src="js/vendor/store.js"></script>
 <script type="text/javascript" src="js/vendor/require.js" data-main="js/config.js"></script>
 <script type="text/javascript">
 
