--- a/trunk/clientv2/company-comparables.html
+++ b/trunk/clientv2/company-comparables.html
@@ -24,12 +24,8 @@
 	<div class="grid scan">
 		<span data-bind="template: 'company-header'"></span>
 	</div>
-	
-	<div class="grid scan">
-		<h2>Comparable Companies</h2>
-	</div>
-	
-	<div class="grid search-results">
+
+	<div class="grid search-results company-comparables">
 		
 		<!-- header -->
 		<div class="title">
