--- a/trunk/clientv2/company-charting.html
+++ b/trunk/clientv2/company-charting.html
@@ -101,7 +101,9 @@
     					</div>
     				</div><!--control-box end-->
 
-    				<div id="technical-chart-container" style="padding-bottom:10px;"></div>
+    				<div id="technical-chart-wrapper">
+                        <div id="technical-chart-container" style="padding-bottom:10px;"></div>
+                    </div>
 
     				<div class="indicators-description">
     					<h2>What are Indicators?</h2>
