--- a/clientv2/print.html
+++ b/clientv2/print.html
@@ -174,7 +174,7 @@
 										</td>
 		
 										<!--  doesn't -->
-										<td class="normal" data-bind="visible: !companyInfo.hasOwnProperty('volWeightedAvgPrice') || companyInfo.volWeightedAvgPrice == null">-</td>
+										<td class="normal" style="text-align:right;" data-bind="visible: !companyInfo.hasOwnProperty('volWeightedAvgPrice') || companyInfo.volWeightedAvgPrice == null">-</td>
 		
 										<!-- both -->
 										<td>&nbsp;</td>
