Tab for estimates.

--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -124,7 +124,7 @@
 			</ul>
 		</nav>
 		<div class="data-point-container">
-			<div class="header" data-bind="visible: quarterlyTab() && estimates.quarterly.length > 0">
+			<div class="header" data-bind="visible: (quarterlyTab() && estimates.quarterly.length > 0) || (annualTab() && estimates.annually.length > 0)">
 				<div class="tab">Select up to five options to chart the data points.</div>
 			</div>
 
