--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -79,7 +79,7 @@
 				</div>
 				<div>
 					<h4>Industry Recommendation</h4>
-					<p><span data-bind="text:getIndustryRecommendationTxt(summaryData.industryRec)"></span>(<span data-bind="text:summaryData.industryRec, precision: 2"></span>%)</p>
+					<p><span data-bind="text:getIndustryRecommendationTxt(summaryData.industryRec)"></span>(<span data-bind="text:summaryData.industryRec, precision: 2"></span>)</p>
 				</div>
 			</div>
 			<div class="right">
